[gd_scene load_steps=4 format=3 uid="uid://bcjv8vhld772n"]

[ext_resource type="Script" path="res://scripts/Pipe.gd" id="1_26tya"]
[ext_resource type="PackedScene" uid="uid://bm30jordfxasc" path="res://scenes/pipe.tscn" id="1_va3wp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8uym"]
size = Vector2(7, 137)

[node name="Pipes" type="CharacterBody2D"]
position = Vector2(0, 3)
scale = Vector2(1.96, 2.16)
script = ExtResource("1_26tya")

[node name="bottom_pipe" parent="." instance=ExtResource("1_va3wp")]
position = Vector2(0, 232)

[node name="top_pipe" parent="." instance=ExtResource("1_va3wp")]
position = Vector2(0, -234)
rotation = 3.14159

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(21.5, -0.500002)
scale = Vector2(0.35, 7.35)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(21.5, -1.5)
shape = SubResource("RectangleShape2D_m8uym")

[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_screen_exited"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
